crates/nyx-lexer/tests/snapshots/integration_tests__types__namespaced_aliases.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Type
- Ident: String
- Eq
- LBracket
- U8
- RBracket
- Newline
- Type
- Ident: Vector2
- Colon
- Colon
- Ident: Alpine
- Eq
- I32
- Newline
- Type
- Ident: math
- Colon
- Colon
- Ident: Matrix
- Eq
- I32
- Newline
