crates/nyx-lexer/tests/snapshots/integration_tests__types__pointer_types.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Type
- Ident: RawPtr
- Eq
- Star
- U8
- Newline
- Type
- Ident: MutPtr
- Eq
- Star
- Mut
- U8
- Newline
- Type
- Ident: OptPtr
- Eq
- Question
- Star
- U8
- Newline
- Type
- Ident: OptMutPtr
- Eq
- Question
- Star
- Mut
- U8
- Newline
- Type
- Ident: PtrPtr
- Eq
- Star
- Star
- U8
- Newline
- Type
- Ident: MutPtrPtr
- Eq
- Star
- Mut
- Star
- Mut
- U8
- Newline
