crates/nyx-lexer/tests/snapshots/integration_tests__types__visibility_on_types.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Public
- Type
- Ident: PublicInt
- Eq
- I32
- Newline
- Export
- Type
- Ident: ExportedByte
- Eq
- U8
- Newline
- Private
- Type
- Ident: PrivateFloat
- Eq
- F64
- Newline
